--- a/pom.xml
+++ b/pom.xml
@@ -38,5 +38,10 @@
       <artifactId>jline</artifactId>
       <version>2.10</version>
     </dependency>
+    <dependency>
+      <groupId>org.jgroups</groupId>
+      <artifactId>jgroups</artifactId>
+      <version>3.2.4.Final</version>
+    </dependency>
   </dependencies>
 </project>
