--- a/pom.xml
+++ b/pom.xml
@@ -65,12 +65,29 @@
         <dependency>
             <groupId>jline</groupId>
             <artifactId>jline</artifactId>
-            <version>2.10</version>
+            <version>2.11</version>
         </dependency>
         <dependency>
             <groupId>org.jgroups</groupId>
             <artifactId>jgroups</artifactId>
             <version>3.2.4.Final</version>
         </dependency>
+        <dependency>
+            <groupId>com.wittams</groupId>
+            <artifactId>gritty</artifactId>
+            <version>0.03</version>
+        </dependency>
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
+        </dependency>
     </dependencies>
+    
+    <repositories>
+        <repository>
+            <id>CCS maven2 public</id>
+            <url>https://dev.lsstcorp.org:8081/nexus/content/groups/ccs-maven2-public/</url>
+        </repository>
+    </repositories>
 </project>
